# cmd/swag/docs/swagger.yaml
@@ -9,6 +9,13 @@ definitions:
       verify_type:
         type: integer
     type: object
+  model.UpdateUserPasswordInput:
+    properties:
+      user_password:
+        type: string
+      user_token:
+        type: string
+    type: object
   model.VerifyInput:
     properties:
       verify_code:
@@ -75,6 +82,32 @@ paths:
       summary: Show an account
       tags:
       - User Registration
+  /user/update_pass_register:
+    post:
+      consumes:
+      - application/json
+      description: user UpdatePasswordRegister
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateUserPasswordInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Show an account
+      tags:
+      - User UpdatePasswordRegister
   /user/verify_account:
     post:
       consumes:
